vcluster_versioned_docs/version-0.20.0/_partials/config/policies.mdx

<details className="config-field" data-expandable="true">
<summary>

## `policies` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies}

Policies to enforce for the virtual cluster deployment as well as within the virtual cluster.

</summary>




<details className="config-field" data-expandable="true">
<summary>

### `networkPolicy` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-networkPolicy}

NetworkPolicy specifies network policy options.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">false</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-networkPolicy-enabled}

Enabled defines if the network policy should be deployed by vCluster.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `fallbackDns` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default">8.8.8.8</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-networkPolicy-fallbackDns}



</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `outgoingConnections` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-networkPolicy-outgoingConnections}



</summary>




<details className="config-field" data-expandable="true">
<summary>

##### `ipBlock` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-networkPolicy-outgoingConnections-ipBlock}

IPBlock describes a particular CIDR (Ex. "192.168.1.0/24","2001:db8::/64") that is allowed
to the pods matched by a NetworkPolicySpec's podSelector. The except entry describes CIDRs
that should not be included within this rule.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `cidr` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default">0.0.0.0/0</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-networkPolicy-outgoingConnections-ipBlock-cidr}

cidr is a string representing the IPBlock
Valid examples are "192.168.1.0/24" or "2001:db8::/64"

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `except` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default">&#91;100.64.0.0/10 127.0.0.0/8 10.0.0.0/8 172.16.0.0/12 192.168.0.0/16&#93;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-networkPolicy-outgoingConnections-ipBlock-except}

except is a slice of CIDRs that should not be included within an IPBlock
Valid examples are "192.168.1.0/24" or "2001:db8::/64"
Except values will be rejected if they are outside the cidr range

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `platform` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-networkPolicy-outgoingConnections-platform}

Platform enables egress access towards loft platform

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `annotations` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-networkPolicy-annotations}

Annotations are extra annotations for this resource.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `labels` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-networkPolicy-labels}

Labels are extra labels for this resource.

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `podSecurityStandard` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-podSecurityStandard}

PodSecurityStandard that can be enforced can be one of: empty (""), baseline, restricted or privileged

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

### `resourceQuota` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-resourceQuota}

ResourceQuota specifies resource quota options.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">false</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-resourceQuota-enabled}

Enabled defines if the resource quota should be enabled.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `quota` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">map&#91;count/configmaps:100 count/endpoints:40 count/persistentvolumeclaims:20 count/pods:20 count/secrets:100 count/services:20 limits.cpu:20 limits.ephemeral-storage:160Gi limits.memory:40Gi requests.cpu:10 requests.ephemeral-storage:60Gi requests.memory:20Gi requests.storage:100Gi services.loadbalancers:1 services.nodeports:0&#93;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-resourceQuota-quota}

Quota are the quota options

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `scopeSelector` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">map&#91;matchExpressions:&#91;&#93;&#93;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-resourceQuota-scopeSelector}

ScopeSelector is the resource quota scope selector

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `scopes` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default">&#91;&#93;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-resourceQuota-scopes}

Scopes are the resource quota scopes

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `annotations` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-resourceQuota-annotations}

Annotations are extra annotations for this resource.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `labels` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-resourceQuota-labels}

Labels are extra labels for this resource.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `limitRange` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-limitRange}

LimitRange specifies limit range options.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">false</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-limitRange-enabled}

Enabled defines if the limit range should be deployed by vCluster.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `default` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">map&#91;cpu:1 ephemeral-storage:8Gi memory:512Mi&#93;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-limitRange-default}

Default are the default limits for the limit range

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `defaultRequest` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">map&#91;cpu:100m ephemeral-storage:3Gi memory:128Mi&#93;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-limitRange-defaultRequest}

DefaultRequest are the default request options for the limit range

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `annotations` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-limitRange-annotations}

Annotations are extra annotations for this resource.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `labels` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-limitRange-labels}

Labels are extra labels for this resource.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `centralAdmission` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission}

CentralAdmission defines what validating or mutating webhooks should be enforced within the virtual cluster.

</summary>




<details className="config-field" data-expandable="true">
<summary>

#### `validatingWebhooks` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-validatingWebhooks}

ValidatingWebhooks are validating webhooks that should be enforced in the virtual cluster

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `kind` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-validatingWebhooks-kind}

Kind is a string value representing the REST resource this object represents.
Servers may infer this from the endpoint the client submits requests to.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `apiVersion` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-validatingWebhooks-apiVersion}

APIVersion defines the versioned schema of this representation of an object.
Servers should convert recognized schemas to the latest internal value, and
may reject unrecognized values.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `metadata` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-validatingWebhooks-metadata}

Standard object metadata; More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#metadata.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-validatingWebhooks-metadata-name}

Name must be unique within a namespace. Is required when creating resources, although
some resources may allow a client to request the generation of an appropriate name
automatically. Name is primarily intended for creation idempotence and configuration
definition.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `labels` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-validatingWebhooks-metadata-labels}

Map of string keys and values that can be used to organize and categorize
(scope and select) objects. May match selectors of replication controllers
and services.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `annotations` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-validatingWebhooks-metadata-annotations}

Annotations is an unstructured key value map stored with a resource that may be
set by external tools to store and retrieve arbitrary metadata.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `webhooks` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-validatingWebhooks-webhooks}

Webhooks is a list of webhooks and the affected resources and operations.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-validatingWebhooks-webhooks-name}

The name of the admission webhook.
Name should be fully qualified, e.g., imagepolicy.kubernetes.io, where
"imagepolicy" is the name of the webhook, and kubernetes.io is the name
of the organization.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `clientConfig` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-validatingWebhooks-webhooks-clientConfig}

ClientConfig defines how to communicate with the hook.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `url` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-validatingWebhooks-webhooks-clientConfig-url}

URL gives the location of the webhook, in standard URL form
(`scheme://host:port/path`). Exactly one of `url` or `service`
must be specified.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `service` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-validatingWebhooks-webhooks-clientConfig-service}

Service is a reference to the service for this webhook. Either
`service` or `url` must be specified.

If the webhook is running within the cluster, then you should use `service`.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `namespace` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-validatingWebhooks-webhooks-clientConfig-service-namespace}

Namespace is the namespace of the service.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-validatingWebhooks-webhooks-clientConfig-service-name}

Name is the name of the service.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `path` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-validatingWebhooks-webhooks-clientConfig-service-path}

Path is an optional URL path which will be sent in any request to
this service.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `port` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-validatingWebhooks-webhooks-clientConfig-service-port}

If specified, the port on the service that hosting webhook.
Default to 443 for backward compatibility.
`port` should be a valid port number (1-65535, inclusive).

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `caBundle` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-validatingWebhooks-webhooks-clientConfig-caBundle}

CABundle is a PEM encoded CA bundle which will be used to validate the webhook's server certificate.
If unspecified, system trust roots on the apiserver are used.

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `rules` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-validatingWebhooks-webhooks-rules}

Rules describes what operations on what resources/subresources the webhook cares about.
The webhook cares about an operation if it matches _any_ Rule.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `failurePolicy` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-validatingWebhooks-webhooks-failurePolicy}

FailurePolicy defines how unrecognized errors from the admission endpoint are handled -
allowed values are Ignore or Fail. Defaults to Fail.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `matchPolicy` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-validatingWebhooks-webhooks-matchPolicy}

matchPolicy defines how the "rules" list is used to match incoming requests.
Allowed values are "Exact" or "Equivalent".

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `namespaceSelector` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-validatingWebhooks-webhooks-namespaceSelector}

NamespaceSelector decides whether to run the webhook on an object based
on whether the namespace for that object matches the selector. If the
object itself is a namespace, the matching is performed on
object.metadata.labels. If the object is another cluster scoped resource,
it never skips the webhook.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `objectSelector` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-validatingWebhooks-webhooks-objectSelector}

ObjectSelector decides whether to run the webhook based on if the
object has matching labels. objectSelector is evaluated against both
the oldObject and newObject that would be sent to the webhook, and
is considered to match if either object matches the selector.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `sideEffects` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-validatingWebhooks-webhooks-sideEffects}

SideEffects states whether this webhook has side effects.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `timeoutSeconds` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-validatingWebhooks-webhooks-timeoutSeconds}

TimeoutSeconds specifies the timeout for this webhook.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `admissionReviewVersions` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-validatingWebhooks-webhooks-admissionReviewVersions}

AdmissionReviewVersions is an ordered list of preferred `AdmissionReview`
versions the Webhook expects.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `matchConditions` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-validatingWebhooks-webhooks-matchConditions}

MatchConditions is a list of conditions that must be met for a request to be sent to this
webhook. Match conditions filter requests that have already been matched by the rules,
namespaceSelector, and objectSelector. An empty list of matchConditions matches all requests.
There are a maximum of 64 match conditions allowed.

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `mutatingWebhooks` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-mutatingWebhooks}

MutatingWebhooks are mutating webhooks that should be enforced in the virtual cluster

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `kind` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-mutatingWebhooks-kind}

Kind is a string value representing the REST resource this object represents.
Servers may infer this from the endpoint the client submits requests to.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `apiVersion` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-mutatingWebhooks-apiVersion}

APIVersion defines the versioned schema of this representation of an object.
Servers should convert recognized schemas to the latest internal value, and
may reject unrecognized values.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `metadata` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-mutatingWebhooks-metadata}

Standard object metadata; More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#metadata.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-mutatingWebhooks-metadata-name}

Name must be unique within a namespace. Is required when creating resources, although
some resources may allow a client to request the generation of an appropriate name
automatically. Name is primarily intended for creation idempotence and configuration
definition.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `labels` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-mutatingWebhooks-metadata-labels}

Map of string keys and values that can be used to organize and categorize
(scope and select) objects. May match selectors of replication controllers
and services.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `annotations` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-mutatingWebhooks-metadata-annotations}

Annotations is an unstructured key value map stored with a resource that may be
set by external tools to store and retrieve arbitrary metadata.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `webhooks` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-mutatingWebhooks-webhooks}

Webhooks is a list of webhooks and the affected resources and operations.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `reinvocationPolicy` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-mutatingWebhooks-webhooks-reinvocationPolicy}

reinvocationPolicy indicates whether this webhook should be called multiple times as part of a single admission evaluation.
Allowed values are "Never" and "IfNeeded".

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-mutatingWebhooks-webhooks-name}

The name of the admission webhook.
Name should be fully qualified, e.g., imagepolicy.kubernetes.io, where
"imagepolicy" is the name of the webhook, and kubernetes.io is the name
of the organization.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `clientConfig` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-mutatingWebhooks-webhooks-clientConfig}

ClientConfig defines how to communicate with the hook.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `url` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-mutatingWebhooks-webhooks-clientConfig-url}

URL gives the location of the webhook, in standard URL form
(`scheme://host:port/path`). Exactly one of `url` or `service`
must be specified.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `service` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-mutatingWebhooks-webhooks-clientConfig-service}

Service is a reference to the service for this webhook. Either
`service` or `url` must be specified.

If the webhook is running within the cluster, then you should use `service`.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `namespace` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-mutatingWebhooks-webhooks-clientConfig-service-namespace}

Namespace is the namespace of the service.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-mutatingWebhooks-webhooks-clientConfig-service-name}

Name is the name of the service.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `path` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-mutatingWebhooks-webhooks-clientConfig-service-path}

Path is an optional URL path which will be sent in any request to
this service.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `port` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-mutatingWebhooks-webhooks-clientConfig-service-port}

If specified, the port on the service that hosting webhook.
Default to 443 for backward compatibility.
`port` should be a valid port number (1-65535, inclusive).

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `caBundle` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-mutatingWebhooks-webhooks-clientConfig-caBundle}

CABundle is a PEM encoded CA bundle which will be used to validate the webhook's server certificate.
If unspecified, system trust roots on the apiserver are used.

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `rules` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-mutatingWebhooks-webhooks-rules}

Rules describes what operations on what resources/subresources the webhook cares about.
The webhook cares about an operation if it matches _any_ Rule.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `failurePolicy` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-mutatingWebhooks-webhooks-failurePolicy}

FailurePolicy defines how unrecognized errors from the admission endpoint are handled -
allowed values are Ignore or Fail. Defaults to Fail.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `matchPolicy` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-mutatingWebhooks-webhooks-matchPolicy}

matchPolicy defines how the "rules" list is used to match incoming requests.
Allowed values are "Exact" or "Equivalent".

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `namespaceSelector` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-mutatingWebhooks-webhooks-namespaceSelector}

NamespaceSelector decides whether to run the webhook on an object based
on whether the namespace for that object matches the selector. If the
object itself is a namespace, the matching is performed on
object.metadata.labels. If the object is another cluster scoped resource,
it never skips the webhook.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `objectSelector` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-mutatingWebhooks-webhooks-objectSelector}

ObjectSelector decides whether to run the webhook based on if the
object has matching labels. objectSelector is evaluated against both
the oldObject and newObject that would be sent to the webhook, and
is considered to match if either object matches the selector.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `sideEffects` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-mutatingWebhooks-webhooks-sideEffects}

SideEffects states whether this webhook has side effects.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `timeoutSeconds` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-mutatingWebhooks-webhooks-timeoutSeconds}

TimeoutSeconds specifies the timeout for this webhook.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `admissionReviewVersions` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-mutatingWebhooks-webhooks-admissionReviewVersions}

AdmissionReviewVersions is an ordered list of preferred `AdmissionReview`
versions the Webhook expects.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `matchConditions` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policies-centralAdmission-mutatingWebhooks-webhooks-matchConditions}

MatchConditions is a list of conditions that must be met for a request to be sent to this
webhook. Match conditions filter requests that have already been matched by the rules,
namespaceSelector, and objectSelector. An empty list of matchConditions matches all requests.
There are a maximum of 64 match conditions allowed.

</summary>



</details>


</details>


</details>


</details>


</details>
